--- a/chatMockup/main.css
+++ b/chatMockup/main.css
@@ -3,12 +3,6 @@ body{
     margin-top:20px;
 }
 
-.user-profile img{
-    vertical-align: bottom;
-    width: 45px;
-    border-radius: 50%;
-}
-
 .card {
     background: #fff;
     transition: .5s;
@@ -19,6 +13,36 @@ body{
     width: 100%;
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
 }
+
+.user-profile img{
+    vertical-align: bottom;
+    width: 45px;
+    border-radius: 50%;
+}
+
+.side-bar {
+    position: relative;
+    height: 100%;
+}
+
+.side-bar .side-bar-buttons {
+    margin: 0;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.side-bar .user-profile {
+    margin: 0;
+    position: absolute;
+    top: 94%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
 .chat-app .people-list {
     width: 280px;
     position: absolute;
@@ -34,7 +58,7 @@ body{
 }
 
 .people-header {
-    padding: 15px 20px;
+    padding: 15px 0px;
 }
 
 #new-message-button {
@@ -189,7 +213,13 @@ body{
 }
 
 .chat .chat-message {
-    padding: 20px
+    padding: 0px 20px; 
+    margin: 0;
+    position: absolute;
+    top: 93%;
+    width: 65%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 .float-right {
@@ -226,6 +256,9 @@ body{
     .chat-app .chat-history {
         height: 300px;
         overflow-x: auto
+    }
+    #new-message-button {
+        padding-top: 0px;
     }
 }
 
